--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,27 @@
 /*  your css code here. If applicable */
+body{
+	background-color:skyblue;
+	
+}
+p:first-child{
+	background-color:black;
+	color:white;
+}
+.lastpara{
+	color:red;
+}
+li:first-child{
+	background-color:white;
+}
+li:last-child{
+	background-color:white;
+}
+li:nth-child(2n){
+	background-color:stalegray;
+}
+
+
+
+
+
+
