--- a/styles.css
+++ b/styles.css
@@ -16,8 +16,9 @@ li:first-child{
 li:last-child{
 	background-color:white;
 }
-li:nth-child(2n){
+li:nth-child(2n-1){
 	background-color:stalegray;
+	color:yellow;
 }
 
 
