--- a/styles.css
+++ b/styles.css
@@ -16,10 +16,15 @@ li:first-child{
 li:last-child{
 	background-color:white;
 }
-li:nth-child(2n-1){
-	background-color:stalegray;
-	color:yellow;
+li:nth-child(2n){
+	background-color:gray;
+	
 }
+li:nth-child(3){
+	background-color:pink;
+	
+}
+
 
 
 
